Fixed How-it-works title wrapping bug

--- a/src/app/how-it-works/how-it-works.component.css
+++ b/src/app/how-it-works/how-it-works.component.css
@@ -20,7 +20,7 @@ h2 {
 
 .title {
     position: absolute;
-    width: 514px;
+    width: 524px;
     height: 160px;
     top: 0;
     left: 319px;
@@ -220,7 +220,7 @@ p {
     }
     
     .title {
-        width: 520px;
+        width: 540px;
         height: 120px;
         top: 0;
         left: 50%;
@@ -310,7 +310,7 @@ p {
     }
     
     .title {
-        width: 273px;
+        width: 280px;
         height: 86px;
         top: 0;
     }   
